--- a/index-fastopt.html
+++ b/index-fastopt.html
@@ -16,5 +16,10 @@
   <script type="text/javascript" src="./target/scala-2.11/example-fastopt.js"></script>
 
   <script type="text/javascript" src="./target/scala-2.11/example-launcher.js"></script>
+	<script>
+		alert(example.ScalaJSExample());
+		var ret = example.ScalaJSExample().square(10);
+		alert(ret);
+	</script>
 </body>
 </html>
