--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
 </head>
 <body>
 
-  <h1>Example Scala.js application - optimized version</h1>
+	<h1>Example Scala.js application - optimized version</h1>
 
-  <p>After having compiled and optimized properly the code for the application (using `sbt fullOptJS`), you should
-    see "It works" herebelow. See README.md for detailed explanations.</p>
+	<p>After having compiled and optimized properly the code for the
+		application (using `sbt fullOptJS`), you should see "It works"
+		herebelow. See README.md for detailed explanations.</p>
 
-  <div id="playground"></div>
+	<div id="playground"></div>
 
-  <script type="text/javascript" src="./target/scala-2.11/example-opt.js"></script>
-  <script type="text/javascript" src="./target/scala-2.11/example-launcher.js"></script>
+	<script type="text/javascript" src="./target/scala-2.11/example-opt.js"></script>
+	<script type="text/javascript"
+		src="./target/scala-2.11/example-launcher.js"></script>
+	<script>
+		alert(example.ScalaJSExample());
+		var ret = example.ScalaJSExample().square(10);
+		alert(ret);
+	</script>
 </body>
 </html>
