--- a/index-fastopt.html
+++ b/index-fastopt.html
@@ -13,12 +13,12 @@
 
   <div id="playground"></div>
 
-  <script type="text/javascript" src="./target/scala-2.11/example-fastopt.js"></script>
+  <script type="text/javascript" src="./target/scala-2.12/example-jsdeps.js"></script>
+  <script type="text/javascript" src="./target/scala-2.12/example-fastopt.js"></script>
 
-  <script type="text/javascript" src="./target/scala-2.11/example-launcher.js"></script>
 	<script>
-		alert(example.ScalaJSExample());
-		var ret = example.ScalaJSExample().square(10);
+		alert(example.ScalaJSExample);
+		var ret = example.ScalaJSExample.square(10);
 		alert(ret);
 	</script>
 </body>
