--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
 		herebelow. See README.md for detailed explanations.</p>
 
 	<div id="playground"></div>
+	<script type="text/javascript" src="./target/scala-2.12/example-jsdeps.min.js"></script>
+	<script type="text/javascript" src="./target/scala-2.12/example-opt.js"></script>
 
-	<script type="text/javascript" src="./target/scala-2.11/example-opt.js"></script>
-	<script type="text/javascript"
-		src="./target/scala-2.11/example-launcher.js"></script>
 	<script>
-		alert(example.ScalaJSExample());
-		var ret = example.ScalaJSExample().square(10);
+		alert(example.ScalaJSExample);
+		var ret = example.ScalaJSExample.square(10);
 		alert(ret);
 	</script>
 </body>
